--- a/_posts/2019-12-30-the-us-narrative-today.html
+++ b/_posts/2019-12-30-the-us-narrative-today.html
@@ -1573,107 +1573,107 @@ stories:
   domain: http://www.southernstandard.com/
   link: https://www.southernstandard.com/top-stories/local-headlines/lawn-decoration-lifts-spirits/
 images:
-- name: supreme-court-supremecourt-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-rain.jpg
-- name: containership-containership-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-really-hot.jpg
-- name: aws-s3-stories-supreme-court-judgement.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-supreme-court-judgement.jpg
-- name: status-berlin-status-berlin-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-jap-wav-pr.jpg
-- name: white-house-whitehouse-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-space-pizza.jpg
-- name: la-muse-berline-wall-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-berline-wall-old-building.jpg
-- name: la-muse-gauge-on-aircraft-carrier.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-gauge-on-aircraft-carrier.jpg
-- name: oldhouse-granaryfield-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dark-dali.jpg
-- name: sand-hand-sand-hand-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dry-skin.jpg
-- name: udnie-IMG_8471.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8471.jpg
-- name: mediterranean-mediterranean-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-sunday.jpg
-- name: trucksilo-trucksilo-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-electricity.jpg
-- name: oldcabin-store-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-crunch-paper.jpg
-- name: old-door-lock-old-door-lock-2-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-gan-vogh.jpg
-- name: gears-4882162452-fa3126b38d-b-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-colored-circuits.jpg
-- name: gypsymosaic-gypsy-eyes-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-crafty-painting.jpg
-- name: dc-statue-dcstatue-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-oily-mcoilface.jpg
-- name: oldbarn-oldbarn-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-pablo-blue.jpg
-- name: flower-barbed-wire-flower-barbed-wire-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-matrix.jpg
-- name: curtain-curtain-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crabapple.jpg
-- name: stalin-time-hallway-long-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-hallway-long-hospital.jpg
-- name: la-muse-dragon-desert-looking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dragon-desert-looking.jpg
-- name: bf-skinner-statue-architecture-holding.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-architecture-holding.jpg
-- name: statue-of-liberty-front-view-statueofliberty-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-crunch-paper.jpg
-- name: old-granary-field-oldhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-umberto-bocc.jpg
-- name: eduardo-eduardo-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-soul.jpg
-- name: oldsmallboat-oldsmallboat-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-neo-instinct.jpg
-- name: downtown-los-angeles-downtown-la-smooth-ride.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-smooth-ride.JPG
-- name: udnie-DSC_0033.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0033.jpg
-- name: art-museum-art-museum-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-cinnamon-rolls.jpg
-- name: subway-subway-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-aqua.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-purple-pond.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purple-pond.JPG
-- name: gears-4882162452-fa3126b38d-b-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-emily-carr.jpg
-- name: berlinwall-DSC-0084-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-clean-view.jpg
-- name: store-on-corner-oldcabin-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purp-paper.jpg
-- name: aws-s3-kerbypeak-kerbypeak-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still.jpg
-- name: windowmountain-window-mountain-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-monet-one.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-- name: lincoln-memorial-lincolnmemorial-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-satan-red.jpg
-- name: bf-skinner-old-remington-typewriter.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-remington-typewriter.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit-4.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit-4.JPG
-- name: desert-dragon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-dark-dali.jpg
-- name: supreme-court-supremecourt-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-gan-vogh.jpg
-- name: death-valley-death-valley-national-park-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-kandinsky-bv.jpg
-- name: old-barn-old-barn-1500-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-light-dali.jpg
-- name: carry-load-carryload-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-kand-two.jpg
-- name: eduardo-eduardo-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-dali.jpg
-- name: locked-up-steam-lock-up-steam-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-free-woman.jpg
-- name: scream-IMG_8352.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8352.jpg
-- name: powerlines-power-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-internet-numbers.jpg
-- name: eduardo-eduardo-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dali-two.jpg
+- name: old-house-oldhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-hot-spicy.jpg
+- name: razorwire-DSC-0080-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-kand-two.jpg
+- name: aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
+- name: powerlines-power-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-marcel-duchamp.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night.jpg
+- name: nazi-invasion-lighthouse_36679514616_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-lighthouse_36679514616_o.jpg
+- name: docks-docks-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-ww2-dresden.jpg
+- name: old-church-oldchurch-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-neo-instinct.jpg
+- name: machine-road-machine-road-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-sand-paper.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-umberto-bocc.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-umberto-bocc.JPG
+- name: white-house-whitehouse-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-marcel-duchamp.jpg
+- name: copper-circuit-old-time-cash-register.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-time-cash-register.jpg
+- name: oldhousecars-house-old-cars-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kandinsky-bv.jpg
+- name: braceros-domingo-ulloa-white-house-west-wing-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-white-house-west-wing-view.jpg
+- name: old-cabin-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-kandinsky-bv.jpg
+- name: victoria-victoria-corner-hotel-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-blue-brush.jpg
+- name: stalin-time-waterfall-southern-oregon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-waterfall-southern-oregon.jpg
+- name: white-house-whitehouse-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-electricity.jpg
+- name: paris-paris-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-internet-numbers.jpg
+- name: ellis-island-ellisisland-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-aqua.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-umberto-bocc.jpg
+- name: aws-s3-stories-new-digital-bits-capital-dc-flag-side-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-digital-bits-capital-dc-flag-side-view.jpg
+- name: statue-of-liberty-front-view-statueofliberty-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-wols.jpg
+- name: containership-bw-storytelling-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling-colorful-blocks.png
+- name: old-church-oldchurch-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-constitution.jpg
+- name: cargo-ship-cargo-ship-on-sea-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-oily-mcoilface.jpg
+- name: old-gas-pumps-oldgaspumps-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dali-two.jpg
+- name: old-granary-field-granaryfield-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purp-paper.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-sunday.jpg
+- name: store-on-corner-oldcabin-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colored-circuits.jpg
+- name: cargo-ship-cargo-ship-on-sea-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-copper-circuit.jpg
+- name: rain-princess-border-watching-cars.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-watching-cars.jpg
+- name: oldhousecars-house-old-cars-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dali-two.jpg
+- name: braceros-domingo-ulloa-train-station-cloud.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-station-cloud.jpg
+- name: berlinwall-DSC-0084-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crafty-painting.jpg
+- name: white-house-whitehouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-green-zuma.jpg
+- name: stories-machine-road-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-light-dali.jpg
+- name: aws-s3-stories-gargoyle-nd-paris-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gargoyle-nd-paris-atari-missle.jpg
+- name: fence-fence-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-electricity.jpg
+- name: fence-fence-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-atari-asteroids.jpg
+- name: adam-smith-adam-smith-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-gan-vogh.jpg
+- name: mosaic-face-mosaic-face-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-umberto-bocc.jpg
+- name: windowmountain-window-mountain-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crunch-paper.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-yellow-collage.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-yellow-collage.JPG
+- name: stalin-time-border-down-the-fence-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-down-the-fence-line.jpg
+- name: copper-circuit-destruction-seattle-viaduct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-destruction-seattle-viaduct.jpg
+- name: adam-smith-adam-smith-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-creativity.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
+- name: old-house-oldhouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dali-two.jpg
+- name: oldbarn-oldbarn-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-green-zuma.jpg
+- name: catacombs-catacombs-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crabapple.jpg
 ---
 Bus Tour To Louisville Farm Show And Fair Oaks Dairy.&nbsp;Madonna's Relationship With Ahlamalik Williams Is Heating Up.&nbsp;'Take A Hike!' To Start Off The New Year.&nbsp;Cities Celebrate Project Rising Tide Graduation.&nbsp;Ross To Start Term As New Rockmart Mayor.&nbsp;Flu Kicks In Nationwide With An Early Start.&nbsp;Scharnowske Crowned Miss Bridgman.&nbsp;Resolving For A Healthy 2020? Talking To Your Family Is A Great Way To Start.&nbsp;
